Enums, pages, webdriver fixes